--- a/data_annotation.ipynb
+++ b/data_annotation.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-27T09:57:31.667308Z",
-     "start_time": "2023-11-27T09:57:31.586371Z"
+     "end_time": "2023-11-27T14:34:27.675879Z",
+     "start_time": "2023-11-27T14:34:27.649982Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "heads = []\n",
@@ -2050,8 +2050,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T11:56:38.272200Z",
-     "start_time": "2023-11-27T11:56:36.898412Z"
+     "end_time": "2023-11-27T14:34:30.330287Z",
+     "start_time": "2023-11-27T14:34:28.934572Z"
     }
    },
    "id": "10cb2e27a38e2bd1"
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -2296,8 +2296,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T11:56:42.142938Z",
-     "start_time": "2023-11-27T11:56:42.090654Z"
+     "end_time": "2023-11-27T14:34:32.466073Z",
+     "start_time": "2023-11-27T14:34:32.287103Z"
     }
    },
    "id": "55d17afc1b2574e0"
@@ -2314,20 +2314,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Options for 'gender':\n",
+      "   woman\n",
       "   man\n",
       "   n/a\n",
-      "   woman\n",
       "\n",
       "Options for 'age':\n",
-      "   n/a\n",
       "   young\n",
+      "   n/a\n",
       "   old\n",
       "\n",
       "Options for 'ethnicity':\n",
@@ -2336,29 +2336,29 @@
       "   Asian\n",
       "\n",
       "Options for 'facial_expression':\n",
-      "   raised brows\n",
-      "   closed eyes\n",
-      "   puffed cheeks\n",
-      "   smiling\n",
-      "   open mouth\n",
       "   n/a\n",
+      "   puffed cheeks\n",
+      "   closed eyes\n",
+      "   open mouth\n",
+      "   smiling\n",
+      "   raised brows\n",
       "\n",
       "Options for 'emotion':\n",
+      "   happy\n",
       "   n/a\n",
       "   sad\n",
-      "   happy\n",
       "\n",
       "Options for 'hairstyle':\n",
-      "   ponytail\n",
-      "   hat\n",
       "   straight hair\n",
       "   n/a\n",
+      "   hat\n",
       "   curly hair\n",
+      "   ponytail\n",
       "\n",
       "Options for 'beard':\n",
-      "   no\n",
+      "   yes\n",
       "   n/a\n",
-      "   yes\n"
+      "   no\n"
      ]
     }
    ],
@@ -2379,15 +2379,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T11:56:44.466483Z",
-     "start_time": "2023-11-27T11:56:44.447299Z"
+     "end_time": "2023-11-27T14:34:33.825321Z",
+     "start_time": "2023-11-27T14:34:33.780087Z"
     }
    },
    "id": "b3ac0098e42a0490"
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -2483,21 +2483,45 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T11:56:46.630138Z",
-     "start_time": "2023-11-27T11:56:46.560764Z"
+     "end_time": "2023-11-27T14:34:34.556976Z",
+     "start_time": "2023-11-27T14:34:34.524149Z"
     }
    },
    "id": "13b4ef33869e69b3"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f51142da1ff9dbc",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T14:34:36.806293Z",
+     "start_time": "2023-11-27T14:34:36.729211Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([0, 3, 12, 24, 28, 36, 49, 50, 54, 58, 63, 76, 81, 85, 87, 92, 113, 119, 123, 129, 140, 142, 145, 146, 148, 171, 173, 174], [10, 11, 15, 18, 20, 30, 34, 35, 47, 48, 51, 74, 83, 84, 98, 99, 105, 106, 114, 115, 126, 149, 150, 156, 163, 164, 167, 168, 170], [1, 2, 7, 13, 21, 25, 33, 37, 57, 59, 61, 68, 77, 82, 86, 104, 107, 121, 127, 128, 130, 131, 138, 139, 159, 160, 161, 162, 169, 172])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((closed_eyes_indices, raised_brows_indices, puffed_cheeks_indices))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "id": "40e7586caf7120d9"
   }
  ],
  "metadata": {
