implemented gradients only through substep and chunking during sdf calls

--- a/notebooks/pipelining.ipynb
+++ b/notebooks/pipelining.ipynb
@@ -11,13 +11,15 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"/home/schmid/Text2Head/NPHM\")\n",
+    "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
+    "%env CUDA_VISIBLE_DEVICES=0\n",
     "\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "from torch.optim import Adam\n",
     "from utils.pipeline import forward, get_latent_mean_std, get_latent_from_text\n",
+    "\n",
+    "from torch.profiler import profile, record_function, ProfilerActivity\n",
     "\n",
     "torch.cuda.empty_cache()"
    ]
@@ -148,8 +150,8 @@
    "outputs": [],
    "source": [
     "hparams = {\n",
-    "        'resolution': 120,\n",
-    "        'n_iterations': 80,\n",
+    "        'resolution': 200,\n",
+    "        'n_iterations': 100,\n",
     "        'optimizer_lr': 1.4e-3,\n",
     "        'lr_scheduler_factor': 0.53,\n",
     "        'lr_scheduler_patience': 5,\n",
@@ -157,10 +159,10 @@
     "    }\n",
     "\n",
     "#torch.cuda.memory._record_memory_history(True)\n",
-    "best_latent, best_score, hist = get_latent_from_text(\"A woman\", hparams)\n",
+    "best_latent, best_score, hist = get_latent_from_text(\"A feminine woman with long hair\", hparams)\n",
     "#torch.cuda.memory._record_memory_history(False)\n",
     "#torch.cuda.memory._dump_snapshot(\"../memory_snapshot.pickle\")\n",
-    "print(best_score)"
+    "#print(best_score)"
    ]
   },
   {
@@ -255,8 +257,8 @@
     "for i, im in enumerate(hist[\"images\"]):\n",
     "    plt.imshow(im.detach().numpy())\n",
     "    plt.axis('off')  # Turn off axes\n",
-    "    #plt.show()\n",
-    "    plt.savefig(f\"../optim_img/{i}\", bbox_inches='tight')"
+    "    plt.show()\n",
+    "    #plt.savefig(f\"../optim_img/{i}\", bbox_inches='tight')"
    ]
   },
   {
