increase val set to 50

--- a/notebooks/val_set_annotation.ipynb
+++ b/notebooks/val_set_annotation.ipynb
@@ -82,9 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
    "source": [
     "heads = []\n",
     "\n",
@@ -181,7 +189,7 @@
     "head_data = {}\n",
     "head_data['subject'] = '034'\n",
     "head_data['expression neutral'] = '010'\n",
-    "head_data['description neutral'] = 'A young man with oval face, concave facial profile, straight wide nose, thin lips and short straight hair.'\n",
+    "head_data['description neutral'] = 'A young man with oval face, straight wide nose, thin lips and short straight hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
@@ -265,108 +273,129 @@
     "head_data = {}\n",
     "head_data['subject'] = '049'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian woman with oval face, monolid eyes, wide snub nose, full cheeks, undefined jawline, bangs and ponytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '050'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young man with oblong face, large forehead, high wide-set eyebrows, wide nose, protruding chin, full cheeks, undefined jawline and short hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '051'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young woman with large downturned eyes, prominent upper eyelid, under eye bags, a nose broadening towards the tip, low columella, slightly humped nose, straight facial profile, dedined cheekbones, high downturned eyebrows and ponytail.'\n",
     "heads.append(head_data)\n",
-    "'''\n",
+    "\n",
     "head_data = {}\n",
     "head_data['subject'] = '052'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A man with oblong face, wide lower face, small close-set eyes, full cheeks, stubble beard, double chin, small mouth, straight eyebrows and short hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '053'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian woman with wide foehead, straight facial profile, monolid eyes, undefined jawline, snub nose, high hairline and ponytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '054'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian woman with round face, straight facial profile, monolid eyes, short and wide snub nose, full cheeks with dimple, larger right ear and side-parted ponytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '055'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian man with round face, monolid eyes, hawk nose, nose inclined to the left, small mouth, undefined jawline, slighlty convex facial profile and short hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '056'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young man with oblong face, large forehead, pufy eyes, straight nose, slightly convex facial profile, high hairlilne and fringe up undercut.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '057'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian woman with high monolid eyes, straight facial profile, small snub nose, undefined jawline, crooked and frayed bangs and ponytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '058'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young man with oblong face, protruding large forehead, almond shaped eyes, high eyebrows, under eye bags, wide-set straight eyebrows, nose inclined to the left and short hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '059'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young man with oblong face, large forehead, close-set puffy eyes, straight nose, hollow cheeks, defined jawline and side-parted short hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '060'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young man with oblong face, large forehead, under eye bags, straight facial profile, undefined jawline, nose broadening towards the tip, high wide-set straight eyebrows, small ears and undercut.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '061'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian man with round face, monolid eyes, small chin, large slightly convex nose, full lips, defined jawline wearing a hat.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '062'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian man with oval face, large forehead, small monolid eyes, high hairline, small snub nose, undefined jawline, full cheeks and undercut.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '063'\n",
     "head_data['expression neutral'] = '002'\n",
+    "head_data['description neutral'] = 'A young woman with oval face, straight facial profile, thin lips, high arched eybrows, birthmark near the left nasolabial fold, nose narrowing in the middle and poytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '064'\n",
     "head_data['expression neutral'] = '024'\n",
+    "head_data['description neutral'] = 'A young woman with a narrow oval face, straight nose, defined cheekbones, defined jawline, high straight eyebrows and a ponytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '065'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A oung man with oval face, narrow eyes, prominent upper eyelid, under eye bags, wide-set eyebrows, defined cheekbones, defined jawline, stubble beard and side-parted short hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '067'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young woman with oval face, convex facial profile, full cheeks, nose widening towards the tip, big close-set eyes, thin lips and ponytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '068'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young man with a triangle-shaped face, wide forehead, hollow cheeks, close-set hooded eyes, small mouth, nose broadening towards the tip and short hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '069'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian man with oval face, large forehead, hiagh hairline, big monolid eyes, small Roman nose, flat facial profile and short side-parted hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '070'\n",
     "head_data['expression neutral'] = '001'\n",
+    "head_data['description neutral'] = 'A young Asian woman with oval face, monolid eyes, small nose widening towards the tip, high eyebrows, straight facial profile, side-parted hair and ponytail.'\n",
     "heads.append(head_data)\n",
-    "\n",
+    "'''\n",
     "head_data = {}\n",
     "head_data['subject'] = '071'\n",
     "head_data['expression neutral'] = '001'\n",
@@ -1077,7 +1106,8 @@
     "head_data['expression neutral'] = '001'\n",
     "heads.append(head_data)\n",
     "'''\n",
-    "data = {\"heads\": heads}"
+    "data = {\"heads\": heads}\n",
+    "print (len(data['heads']))"
    ]
   },
   {
