optimize hparams with CLIPs similarity

--- a/notebooks/hparamtuning.ipynb
+++ b/notebooks/hparamtuning.ipynb
@@ -133,7 +133,10 @@
     "    study.optimize(objective, n_trials=5)\n",
     "        \n",
     "    best_params = study.best_params\n",
-    "    print(best_params)"
+    "    print(best_params)\n",
+    "    # print every hyperparameter and its value in a separate line\n",
+    "    for key, value in best_params.items():\n",
+    "        print(f\"{key}: {value}\")"
    ]
   }
  ],
