small correction annotation

--- a/notebooks/val_set_annotation.ipynb
+++ b/notebooks/val_set_annotation.ipynb
@@ -63,7 +63,7 @@
     "head_data = {}\n",
     "head_data['subject'] = '018'\n",
     "head_data['expression neutral'] = '008'\n",
-    "head_data['description neutral'] = 'A young woman with a round face, very convex facial profile, big eyes, round eyes, turn-up nose, thin lips, full cheeks, undefined cheekbones, receding hairline and ponytail.'\n",
+    "head_data['description neutral'] = 'A young woman with a round face, very convex facial profile, big eyes, round eyes, turn-up nose, thin lips, full cheeks, undefined cheekbones, high hairline and ponytail.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
@@ -75,13 +75,13 @@
     "head_data = {}\n",
     "head_data['subject'] = '020'\n",
     "head_data['expression neutral'] = '010'\n",
-    "head_data['description neutral'] = 'An young Asian man with a chunky face, rectangular face, big monolid eyes, bulging eyes, wide nostrils, flat nose, saggy cheeks, undefined jawline and side-parted hair.'\n",
+    "head_data['description neutral'] = 'An young Asian man with a chubby face, rectangular face, big monolid eyes, bulging eyes, wide nostrils, flat nose, saggy cheeks, undefined jawline and side-parted hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
     "head_data['subject'] = '022'\n",
     "head_data['expression neutral'] = '009'\n",
-    "head_data['description neutral'] = 'A young Asian man with an oblong face, monolid eyes, protruding chin, straight wide nose, short eyebrows and undercut hairstyle.'\n",
+    "head_data['description neutral'] = 'A young Asian man with an oblong face, monolid eyes, protruding chin, straight nose, wide nose, short eyebrows and undercut hairstyle.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
@@ -1255,7 +1255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A young woman with a round face, very convex facial profile, big eyes, round eyes, turn-up nose, thin lips, full cheeks, undefined cheekbones, receding hairline and ponytail.\n",
+      "A young woman with a round face, very convex facial profile, big eyes, round eyes, turn-up nose, thin lips, full cheeks, undefined cheekbones, high hairline and ponytail.\n",
       "#############\n",
       "019\n"
      ]
@@ -1293,7 +1293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An young Asian man with a chunky face, rectangular face, big monolid eyes, bulging eyes, wide nostrils, flat nose, saggy cheeks, undefined jawline and side-parted hair.\n",
+      "An young Asian man with a chubby face, rectangular face, big monolid eyes, bulging eyes, wide nostrils, flat nose, saggy cheeks, undefined jawline and side-parted hair.\n",
       "#############\n",
       "022\n"
      ]
@@ -1312,7 +1312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A young Asian man with an oblong face, monolid eyes, protruding chin, straight wide nose, short eyebrows and undercut hairstyle.\n",
+      "A young Asian man with an oblong face, monolid eyes, protruding chin, straight nose, wide nose, short eyebrows and undercut hairstyle.\n",
       "#############\n",
       "023\n"
      ]
