--- a/notebooks/val_set_annotation.ipynb
+++ b/notebooks/val_set_annotation.ipynb
@@ -93,7 +93,7 @@
     "head_data = {}\n",
     "head_data['subject'] = '024'\n",
     "head_data['expression neutral'] = '008'\n",
-    "head_data['description neutral'] = 'A man with very a high forehead, straight facial profile, fleshy lips, downturned eyes, very low eyebrows, undereye bags, straight nose, chin dimple, undefined jawline and short curly hair.'\n",
+    "head_data['description neutral'] = 'A man with a very high forehead, straight facial profile, fleshy lips, downturned eyes, very low eyebrows, undereye bags, straight nose, chin dimple, undefined jawline and short curly hair.'\n",
     "heads.append(head_data)\n",
     "\n",
     "head_data = {}\n",
@@ -1350,7 +1350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A man with very a high forehead, straight facial profile, fleshy lips, downturned eyes, very low eyebrows, undereye bags, straight nose, chin dimple, undefined jawline and short curly hair.\n",
+      "A man with a very high forehead, straight facial profile, fleshy lips, downturned eyes, very low eyebrows, undereye bags, straight nose, chin dimple, undefined jawline and short curly hair.\n",
       "#############\n",
       "025\n"
      ]
