added notebook to test rendering with mono nphm

--- a/notebooks/monoNPHM_test.ipynb
+++ b/notebooks/monoNPHM_test.ipynb
@@ -10,8 +10,17 @@
     "import torch\n",
     "import os.path as osp\n",
     "\n",
-    "from nphm_tum import env_paths\n",
-    "from nphm_tum.models.neural3dmm import construct_n3dmm, load_checkpoint"
+    "from nphm_tum import env_paths as mono_env_paths\n",
+    "from nphm_tum.models.neural3dmm import construct_n3dmm, load_checkpoint\n",
+    "\n",
+    "from NPHM import env_paths\n",
+    "from NPHM.models.EnsembledDeepSDF import FastEnsembleDeepSDFMirrored\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "from utils.render import render\n",
+    "\n",
+    "device = \"cuda\""
    ]
   },
   {
@@ -20,26 +29,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weight_dir_shape = env_paths.EXPERIMENT_DIR_REMOTE + '/'\n",
+    "with open('../NPHM/scripts/configs/fitting_nphm.yaml', 'r') as f:\n",
+    "    CFG = yaml.safe_load(f)\n",
+    "        \n",
+    "weight_dir_shape = env_paths.EXPERIMENT_DIR + '/{}/'.format(CFG['exp_name_shape'])\n",
     "fname_shape = weight_dir_shape + 'configs.yaml'\n",
     "with open(fname_shape, 'r') as f:\n",
-    "    print('Loading config file from: ' + fname_shape)\n",
+    "    CFG_shape = yaml.safe_load(f)\n",
+    "    \n",
+    "lm_inds = np.load(env_paths.ANCHOR_INDICES_PATH)\n",
+    "anchors = torch.from_numpy(np.load(env_paths.ANCHOR_MEAN_PATH)).float().unsqueeze(0).unsqueeze(0).to(device)\n",
+    "decoder_shape = FastEnsembleDeepSDFMirrored(\n",
+    "        lat_dim_glob=CFG_shape['decoder']['decoder_lat_dim_glob'],\n",
+    "        lat_dim_loc=CFG_shape['decoder']['decoder_lat_dim_loc'],\n",
+    "        hidden_dim=CFG_shape['decoder']['decoder_hidden_dim'],\n",
+    "        n_loc=CFG_shape['decoder']['decoder_nloc'],\n",
+    "        n_symm_pairs=CFG_shape['decoder']['decoder_nsymm_pairs'],\n",
+    "        anchors=anchors,\n",
+    "        n_layers=CFG_shape['decoder']['decoder_nlayers'],\n",
+    "        pos_mlp_dim=CFG_shape['decoder'].get('pos_mlp_dim', 256),\n",
+    "    )\n",
+    "decoder_shape = decoder_shape.to(device)\n",
+    "path = osp.join(weight_dir_shape, 'checkpoints/checkpoint_epoch_{}.tar'.format(CFG['checkpoint_shape']))\n",
+    "model_checkpoint = torch.load(path, map_location=device)\n",
+    "decoder_shape.load_state_dict(model_checkpoint['decoder_state_dict'], strict=True)\n",
+    "\n",
+    "def sdf(sdf_inputs, lat_rep):\n",
+    "    lat_rep_in = torch.reshape(lat_rep[0], (1, 1, -1))\n",
+    "    return decoder_shape(sdf_inputs, lat_rep_in, None)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weight_dir_shape = mono_env_paths.EXPERIMENT_DIR_REMOTE + '/'\n",
+    "fname_shape = weight_dir_shape + 'configs.yaml'\n",
+    "with open(fname_shape, 'r') as f:\n",
     "    CFG = yaml.safe_load(f)\n",
-    "    print('###########################################################################')\n",
-    "    print('####################     Model Configs     #############################')\n",
-    "    print('###########################################################################')\n",
-    "    print(json.dumps(CFG, sort_keys=True, indent=4))\n",
     "\n",
     "    # load participant IDs that were used for training\n",
     "    fname_subject_index = f\"{weight_dir_shape}/subject_train_index.json\"\n",
     "    with open(fname_subject_index, 'r') as f:\n",
-    "        print('Loading subject index: ' + fname_subject_index)\n",
     "        subject_index = json.load(f)\n",
     "\n",
     "    # load expression indices that were used for training\n",
     "    fname_subject_index = f\"{weight_dir_shape}/expression_train_index.json\"\n",
     "    with open(fname_subject_index, 'r') as f:\n",
-    "        print('Loading subject index: ' + fname_subject_index)\n",
     "        expression_index = json.load(f)\n",
     "\n",
     "\n",
@@ -54,29 +92,22 @@
     "\n",
     "    # load checkpoint from trained NPHM model, including the latent codes\n",
     "    ckpt_path = osp.join(weight_dir_shape, 'checkpoints/checkpoint_epoch_6500.tar')\n",
-    "    print('Loaded checkpoint from: {}'.format(ckpt_path))\n",
-    "    load_checkpoint(ckpt_path, neural_3dmm, latent_codes)"
+    "    load_checkpoint(ckpt_path, neural_3dmm, latent_codes)\n",
+    "    \n",
+    "    def mono_sdf(sdf_inputs, lat_rep):\n",
+    "        dict_in = {\n",
+    "            \"queries\":sdf_inputs\n",
+    "        }\n",
+    "        cond = {\n",
+    "            \"geo\": torch.reshape(lat_rep[0], (1, 1, -1)),\n",
+    "            \"exp\": torch.reshape(lat_rep[1], (1, 1, -1))\n",
+    "        }\n",
+    "        return neural_3dmm(dict_in, cond)[\"sdf\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def forward(self,\n",
-    "                in_dict,\n",
-    "                cond,\n",
-    "                return_grad : bool = False,\n",
-    "                return_can : bool = False,\n",
-    "                skip_color : bool = False,\n",
-    "                ignore_deformations : bool = False,\n",
-    "                ):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +119,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat_rep = torch.stack([geo_mean, exp_mean], axis=0)\n",
+    "\n",
+    "camera_params = {\n",
+    "        \"camera_distance\": 0.21 * 2.57,\n",
+    "        \"camera_angle\": 45.,\n",
+    "        \"focal_length\": 2.57,\n",
+    "        \"max_ray_length\": 3,\n",
+    "        # Image\n",
+    "        \"resolution_y\": 200,\n",
+    "        \"resolution_x\": 200\n",
+    "    }\n",
+    "phong_params = {\n",
+    "        \"ambient_coeff\": 0.51,\n",
+    "        \"diffuse_coeff\": 0.75,\n",
+    "        \"specular_coeff\": 0.64,\n",
+    "        \"shininess\": 0.5,\n",
+    "        # Colors\n",
+    "        \"object_color\": torch.tensor([0.53, 0.24, 0.64]),\n",
+    "        \"background_color\": torch.tensor([0.36, 0.77, 0.29])\n",
+    "    }\n",
+    "\n",
+    "light_params = {\n",
+    "        \"amb_light_color\": torch.tensor([0.9, 0.16, 0.55]),\n",
+    "        # light 1\n",
+    "        \"light_intensity_1\": 1.42,\n",
+    "        \"light_color_1\": torch.tensor([0.8, 0.97, 0.89]),\n",
+    "        \"light_dir_1\": torch.tensor([-0.6, -0.4, -0.67]),\n",
+    "        # light p\n",
+    "        \"light_intensity_p\": 0.62,\n",
+    "        \"light_color_p\": torch.tensor([0.8, 0.97, 0.89]),\n",
+    "        \"light_pos_p\": torch.tensor([1.19, -1.27, 2.24])\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo_mean.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat_rep.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = render(sdf, lat_rep, camera_params, phong_params, light_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "in_dict = {\n",
-    "    \"queries\":[\n",
-    "        (0, 0, 0)\n",
-    "    ]\n",
+    "    \"queries\":torch.zeros((1, 6, 3)).cuda()\n",
     "}\n",
     "\n",
     "cond = {\n",
@@ -106,26 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for tensor of dimension 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mneural_3dmm\u001b[49m\u001b[43m(\u001b[49m\u001b[43min_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcond\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/Text2Head/lib/python3.9/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1502\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/Text2Head/MonoNPHM/src/nphm_tum/models/neural3dmm.py:68\u001b[0m, in \u001b[0;36mnn3dmm.forward\u001b[0;34m(self, in_dict, cond, return_grad, return_can, skip_color, ignore_deformations)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexpr_direction \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbackward\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;66;03m# provide expression network with predicted facial anchors\u001b[39;00m\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid_model, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmlp_pos\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid_model\u001b[38;5;241m.\u001b[39mmlp_pos \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manchors\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m in_dict:\n\u001b[0;32m---> 68\u001b[0m         in_dict\u001b[38;5;241m.\u001b[39mupdate({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manchors\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_anchors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcond\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mgeo\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m})\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;66;03m# perform backward deformation\u001b[39;00m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mneutral_only:\n\u001b[1;32m     72\u001b[0m \n\u001b[1;32m     73\u001b[0m         \u001b[38;5;66;03m# not sure where this would ever be used\u001b[39;00m\n",
-      "File \u001b[0;32m~/Text2Head/MonoNPHM/src/nphm_tum/models/canonical_space.py:801\u001b[0m, in \u001b[0;36mNPHM.get_anchors\u001b[0;34m(self, lat_rep_geo)\u001b[0m\n\u001b[1;32m    794\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m    795\u001b[0m \u001b[38;5;124;03mPredict the acnhor positions based on the global part of the geometry latent code.\u001b[39;00m\n\u001b[1;32m    796\u001b[0m \n\u001b[1;32m    797\u001b[0m \u001b[38;5;124;03m:param lat_rep_geo:\u001b[39;00m\n\u001b[1;32m    798\u001b[0m \u001b[38;5;124;03m:return:\u001b[39;00m\n\u001b[1;32m    799\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m    800\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconst_anchors:\n\u001b[0;32m--> 801\u001b[0m     glob_feats \u001b[38;5;241m=\u001b[39m \u001b[43mlat_rep_geo\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlat_dim_glob\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    802\u001b[0m     offsets \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmlp_pos(glob_feats)\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_anchors, \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m    803\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39manchors\u001b[38;5;241m.\u001b[39mto(offsets\u001b[38;5;241m.\u001b[39mdevice) \u001b[38;5;241m+\u001b[39m offsets\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for tensor of dimension 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "neural_3dmm(in_dict, cond)"
+    "neural_3dmm(in_dict, cond)[\"sdf\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
    ]
   }
  ],
